--- a/www/core/components/course/lang/en.json
+++ b/www/core/components/course/lang/en.json
@@ -3,6 +3,7 @@
     "activitynotyetviewableremoteaddon": "Your organisation installed a plugin that is not yet supported.",
     "activitynotyetviewablesiteupgradeneeded": "Your organisation's Moodle installation needs to be updated.",
     "allsections": "All sections",
+    "gotocoursecontent": "Course content",
     "askadmintosupport": "Contact the site administrator and tell them you want to use this activity with the Moodle Mobile app.",
     "confirmdeletemodulefiles": "Are you sure you want to delete this module files?",
     "confirmdownload": "You are about to download {{size}}. Are you sure you want to continue?",
